# hffp

./: Makefile  README.md  TALKS.md
chapter-1/: exercises.md
chapter-3/: Reverse.hs  area.hs  curry.hs  exercises.md  print3flipped.hs
chapter-4/: exercises.md  mix.hs  myAbs.hs
chapter-5/: DetermineTheType.hs  TypeKwonDo_1.hs  TypeKwonDo_3.hs  TypeKwonDo_4.hs  TypeKwonDo_example.hs  curry.hs  exercises.md  triple.hs
chapter-6/: EqInstances.hs  Trivial.hs  exercises.md
chapter-7/: arith4.hs  case.hs  exercises.md
chapter-8/: WordNumber.hs  exercises.md
chapter-one/: exercises.md
chapter-two/: exercises.md  functions.hs
chapters/chapter-1/: README.md
chapters/chapter-10/: Database.hs  README.md  exercises.md  rewrite.hs
chapters/chapter-11/: As.hs  Binary.hs  Phone.hs  Razor.hs  Vigenere.hs  exercises.md  goats.hs  programmers.hs  vehicle.hs
chapters/chapter-12/: either.hs  exercises.md  maybe.hs  nat.hs  string.hs  tree.hs  unfold.hs  word.hs
chapters/chapter-13/: README.md  exercises.md  palindrome.hs  person.hs
chapters/chapter-13/hangman/: hangman.cabal
chapters/chapter-13/hangman/src/: Main.hs
chapters/chapter-13/hello/: hello.cabal
chapters/chapter-13/hello/src/: DogsRule.hs  Hello.hs
chapters/chapter-14/: README.md  exercises.md
chapters/chapter-14/addition/: Addition.hs  addition.cabal
chapters/chapter-14/morse/: morse.cabal
chapters/chapter-14/morse/src/: Main.hs  Morse.hs
chapters/chapter-14/morse/tests/: tests.hs
chapters/chapter-14/qc/: README.md  qc.cabal
chapters/chapter-14/qc/tests/: tests.hs
chapters/chapter-15/: Booly.hs  Listy.hs  Madness.hs  Option.hs  README.md
chapters/chapter-15/qc/tests/: tests.hs
chapters/chapter-16/: ChapterExercises.hs  FixMePls.hs  HeavyLifting.hs  IgnoringPossibilities.hs  Or.hs  Possibly.hs  README.md  Sum.hs  Two.hs
chapters/chapter-16/qc/: qc.cabal  stack.yaml
chapters/chapter-16/qc/tests/: tests.hs
chapters/chapter-17/: Constant.hs  Identity.hs  Lookup.hs  README.md
chapters/chapter-17/qc/: qc.cabal
chapters/chapter-17/qc/tests/: Apl1.hs  ChapterExercises.hs  ListApplicative.hs  ListApplicativeTest.hs  Validation.hs  ZipListApplicativeTest.hs  tests.hs
chapters/chapter-2/: README.md  functions.hs
chapters/chapter-4/: README.md  isPalindrome.hs
chapters/chapter-5/: TypeKwonDo_2.hs  exercises.md
chapters/chapter-6/: DayOfWeek.hs  Identity.hs  README.md  mood.hs
chapters/chapter-7/: employee.hs  exercises.md  lambda.hs
chapters/chapter-8/: README.md  WordNumber.hs  mc.hs  recursion.hs
chapters/chapter-9/: Cipher.hs  PoemLines.hs  enumFromTo.hs  exercises.md  explode.hs  myWords.hs
docs/: README-FOOTER.md  README-HEAD.md  README-TOC.md
