name:                qc
version:             0.1.0.0
homepage:            https://github.com/githubuser/qc#readme
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
build-type:          Simple
cabal-version:       >=1.10

test-suite tests
  ghc-options:         -Wall -fno-warn-orphans
  type:                exitcode-stdio-1.0
  main-is:             tests.hs
  hs-source-dirs:      tests
  build-depends:       base
                     , hspec
                     , containers
                     , QuickCheck
                     , checkers
  default-language:    Haskell2010
